--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -1236,7 +1236,11 @@
             <div id="response-fields-standard">
               <div class="form-group">
                 <label class="form-label">Answer Text *</label>
-                <textarea class="form-textarea" id="input-trigger-answer" rows="3" placeholder="Our service call is $89..."></textarea>
+                <textarea class="form-textarea" id="input-trigger-answer" rows="3" placeholder="Great{name}! I'd be happy to help you schedule a service call..."></textarea>
+                <p class="form-hint">
+                  💡 <strong>Personalization:</strong> Use <code>{name}</code> to insert caller's first name. 
+                  Example: "Great{name}!" becomes "Great, Marc!" or "Great!" if no name captured.
+                </p>
               </div>
               
               <div class="form-group">
