feat(scrabengine): fix modal wiring and wire extraction-to-handoff
Repair ScrabEngine button/modal flows and execute custom extraction patterns end-to-end so auto-handoff entities reach booking reliably. Add a Call Console ScrabEngine timeline to trace Deepgram input through normalization, extraction, and delivery events.

Made-with: Cursor

--- a/public/agent-console/callconsole.html
+++ b/public/agent-console/callconsole.html
@@ -358,6 +358,94 @@
       overflow: hidden;
     }
 
+    .scrab-timeline-container {
+      background: #0b1220;
+      border: 1px solid #1e293b;
+      border-radius: var(--radius-lg);
+      margin-bottom: var(--space-5);
+      overflow: hidden;
+    }
+
+    .scrab-timeline-header {
+      display: flex;
+      justify-content: space-between;
+      gap: var(--space-3);
+      padding: var(--space-3) var(--space-4);
+      border-bottom: 1px solid #1e293b;
+      background: #111827;
+      flex-wrap: wrap;
+    }
+
+    .scrab-timeline-title {
+      color: #e2e8f0;
+      font-size: var(--font-size-sm);
+      font-weight: var(--font-weight-semibold);
+    }
+
+    .scrab-timeline-subtitle {
+      color: #94a3b8;
+      font-size: 11px;
+    }
+
+    .scrab-timeline-body {
+      padding: var(--space-3);
+      max-height: 280px;
+      overflow-y: auto;
+    }
+
+    .scrab-event-row {
+      background: #0f172a;
+      border: 1px solid #1e293b;
+      border-radius: var(--radius-md);
+      padding: var(--space-3);
+      margin-bottom: var(--space-2);
+    }
+
+    .scrab-event-row:last-child {
+      margin-bottom: 0;
+    }
+
+    .scrab-event-meta {
+      display: flex;
+      gap: var(--space-2);
+      align-items: center;
+      flex-wrap: wrap;
+      margin-bottom: var(--space-2);
+      font-size: 11px;
+    }
+
+    .scrab-event-turn {
+      color: #60a5fa;
+      font-weight: var(--font-weight-semibold);
+    }
+
+    .scrab-event-time {
+      color: #64748b;
+      font-family: 'SF Mono', 'Consolas', monospace;
+    }
+
+    .scrab-event-type {
+      color: #c4b5fd;
+      font-family: 'SF Mono', 'Consolas', monospace;
+    }
+
+    .scrab-event-content {
+      display: grid;
+      gap: 6px;
+    }
+
+    .scrab-line {
+      color: #e2e8f0;
+      font-size: 12px;
+      line-height: 1.5;
+      word-break: break-word;
+    }
+
+    .scrab-label {
+      color: #94a3b8;
+      font-weight: var(--font-weight-medium);
+    }
+
     .transcript-header {
       display: flex;
       align-items: center;
