--- a/public/agent-console/callconsole.html
+++ b/public/agent-console/callconsole.html
@@ -782,6 +782,168 @@
     .loading-row .loading-spinner {
       margin: 0 auto;
     }
+
+    /* ─────────────────────────────────────────────────────────────────────
+       INLINE SCRABENGINE PIPELINE (within caller turns)
+       Deepgram STT → Stages → Understood → Extractions
+       ───────────────────────────────────────────────────────────────────── */
+    .scrab-inline-card {
+      margin: 8px 0 4px 50px;
+      padding: 10px 14px;
+      background: linear-gradient(135deg, rgba(99, 102, 241, 0.08) 0%, rgba(139, 92, 246, 0.06) 100%);
+      border: 1px solid rgba(99, 102, 241, 0.18);
+      border-radius: 8px;
+      font-size: 12px;
+    }
+
+    .scrab-inline-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 6px;
+    }
+
+    .scrab-inline-title {
+      color: #a78bfa;
+      font-weight: 600;
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+    }
+
+    .scrab-inline-perf {
+      color: #64748b;
+      font-family: 'SF Mono', 'Consolas', monospace;
+      font-size: 10px;
+    }
+
+    .scrab-inline-raw {
+      color: #94a3b8;
+      margin-bottom: 6px;
+      line-height: 1.5;
+      word-break: break-word;
+    }
+
+    .scrab-inline-label {
+      color: #64748b;
+      font-weight: 500;
+      margin-right: 4px;
+    }
+
+    .scrab-inline-stages {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 4px;
+      margin-bottom: 6px;
+    }
+
+    .scrab-stage-chip {
+      display: inline-flex;
+      align-items: center;
+      gap: 4px;
+      padding: 3px 8px;
+      border-radius: 6px;
+      font-size: 11px;
+      line-height: 1.3;
+      max-width: 100%;
+    }
+
+    .scrab-stage-noop {
+      background: rgba(100, 116, 139, 0.12);
+      color: #64748b;
+    }
+
+    .scrab-stage-active {
+      background: rgba(34, 197, 94, 0.12);
+      border: 1px solid rgba(34, 197, 94, 0.25);
+      color: #86efac;
+    }
+
+    .scrab-stage-failed {
+      background: rgba(239, 68, 68, 0.12);
+      border: 1px solid rgba(239, 68, 68, 0.25);
+      color: #fca5a5;
+    }
+
+    .scrab-stage-num {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.1);
+      font-size: 10px;
+      font-weight: 700;
+      flex-shrink: 0;
+    }
+
+    .scrab-stage-label {
+      font-weight: 600;
+      white-space: nowrap;
+    }
+
+    .scrab-stage-detail {
+      color: inherit;
+      opacity: 0.8;
+      font-weight: 400;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      max-width: 280px;
+    }
+
+    .scrab-inline-understood {
+      color: #e2e8f0;
+      font-weight: 500;
+      margin-bottom: 6px;
+      padding: 4px 8px;
+      background: rgba(59, 130, 246, 0.1);
+      border-left: 3px solid #3b82f6;
+      border-radius: 4px;
+      word-break: break-word;
+    }
+
+    .scrab-inline-entities {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 4px;
+      margin-top: 2px;
+    }
+
+    .scrab-inline-entities-label {
+      color: #64748b;
+      font-weight: 500;
+      font-size: 11px;
+    }
+
+    .scrab-entity-chip {
+      display: inline-flex;
+      align-items: center;
+      gap: 3px;
+      padding: 2px 8px;
+      background: rgba(251, 191, 36, 0.12);
+      border: 1px solid rgba(251, 191, 36, 0.3);
+      border-radius: 999px;
+      color: #fbbf24;
+      font-size: 11px;
+      font-family: 'SF Mono', 'Consolas', monospace;
+    }
+
+    .scrab-entity-chip.handoff {
+      background: rgba(16, 185, 129, 0.12);
+      border-color: rgba(16, 185, 129, 0.3);
+      color: #34d399;
+    }
+
+    .scrab-handoff-badge {
+      font-size: 9px;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      opacity: 0.7;
+    }
   </style>
 </head>
 <body>
