--- a/public/agent-console/scrabengine.html
+++ b/public/agent-console/scrabengine.html
@@ -99,14 +99,8 @@
     .empty-state-icon { font-size: 48px; margin-bottom: 12px; opacity: 0.5; }
     .empty-state-text { font-size: 14px; }
     
-    .modal-backdrop { position: fixed; inset: 0; background: rgba(15,23,42,0.6); display: none; align-items: center; justify-content: center; z-index: 9999; }
-    .modal-backdrop.open { display: flex; }
-    .modal { background: #fff; border-radius: 14px; box-shadow: 0 25px 50px rgba(0,0,0,0.25); max-width: 600px; width: 90%; max-height: 85vh; overflow: hidden; display: flex; flex-direction: column; }
-    .modal-header { padding: 20px 24px; border-bottom: 1px solid #e2e8f0; }
-    .modal-title { font-size: 18px; font-weight: 700; color: #0f172a; margin: 0; }
+    .modal { max-width: 600px; width: 90%; max-height: 85vh; }
     .modal-subtitle { font-size: 13px; color: #64748b; margin: 4px 0 0 0; }
-    .modal-body { padding: 24px; overflow-y: auto; flex: 1; }
-    .modal-footer { padding: 16px 24px; border-top: 1px solid #e2e8f0; display: flex; justify-content: flex-end; gap: 12px; }
     
     .form-group { margin-bottom: 16px; }
     .form-label { display: block; font-size: 13px; font-weight: 600; color: #334155; margin-bottom: 6px; }
