--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -842,6 +842,9 @@
           </svg>
           Health Check
         </button>
+        <button class="btn btn-secondary" id="btn-bulk-generate-audio" title="Generate ElevenLabs audio for all eligible triggers">
+          Bulk Audio
+        </button>
         <button class="btn btn-secondary" id="btn-bulk-import-triggers">
           Bulk Import
         </button>
