feat(triggers): enhance search to cover all trigger fields
Search now matches across: label, ruleId, keywords, phrases,
negativeKeywords, answerText, followUpQuestion, LLM facts, priority.

Typing {name} finds all triggers using the name variable.
Typing "schedule" finds triggers with that word in any field.

Made-with: Cursor

--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -979,7 +979,7 @@
                 Local
               </button>
             </div>
-            <input type="text" class="form-input" id="trigger-search" placeholder="Search triggers..." style="width: 200px;">
+            <input type="text" class="form-input" id="trigger-search" placeholder="Search label, keywords, answer, {vars}..." style="width: 260px;">
           </div>
         </div>
         <div class="card-body p-0">
