fix(triggers): make header buttons responsive — smaller, wrap on overflow
Made-with: Cursor

--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -834,31 +834,24 @@
         <span class="company-id-pill" id="header-company-id">—</span>
       </div>
       
-      <div class="header-right">
-        <button class="btn btn-secondary" id="btn-name-greeting" title="Configure one-time name greeting" style="background: #eff6ff; border-color: #93c5fd; color: #1e40af;">
+      <div class="header-right" style="flex-wrap: wrap; gap: 6px;">
+        <button class="btn btn-sm btn-secondary" id="btn-name-greeting" title="Configure one-time name greeting" style="background: #eff6ff; border-color: #93c5fd; color: #1e40af; font-size: 12px; padding: 5px 10px;">
           Name Greeting
         </button>
-        <button class="btn btn-secondary" id="btn-patience-settings" title="Configure caller hold/wait behavior" style="background: #f0fdf4; border-color: #86efac; color: #166534;">
-          ⏸ Patience
+        <button class="btn btn-sm btn-secondary" id="btn-patience-settings" title="Configure caller hold/wait behavior" style="background: #f0fdf4; border-color: #86efac; color: #166534; font-size: 12px; padding: 5px 10px;">
+          Patience
         </button>
-        <button class="btn btn-secondary" id="btn-check-duplicates" title="Check for duplicates">
-          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="1.5"/>
-            <path d="M8 5v3M8 11h.01" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-          </svg>
+        <button class="btn btn-sm btn-secondary" id="btn-check-duplicates" title="Check for duplicates" style="font-size: 12px; padding: 5px 10px;">
           Health Check
         </button>
-        <button class="btn btn-secondary" id="btn-bulk-generate-audio" title="Generate ElevenLabs audio for all eligible triggers">
+        <button class="btn btn-sm btn-secondary" id="btn-bulk-generate-audio" title="Generate ElevenLabs audio for all eligible triggers" style="font-size: 12px; padding: 5px 10px;">
           Bulk Audio
         </button>
-        <button class="btn btn-secondary" id="btn-bulk-import-triggers">
+        <button class="btn btn-sm btn-secondary" id="btn-bulk-import-triggers" style="font-size: 12px; padding: 5px 10px;">
           Bulk Import
         </button>
-        <button class="btn btn-primary" id="btn-add-trigger">
-          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M8 3v10M3 8h10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-          </svg>
-          Add Trigger
+        <button class="btn btn-sm btn-primary" id="btn-add-trigger" style="font-size: 12px; padding: 5px 10px;">
+          + Add Trigger
         </button>
       </div>
     </header>
